Update moving text in mobile

--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
                     <img src="imgs/SNOW_20220616_130735_582.jpg" alt="Luciana">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Luciana and I'm a <span class="typing_2"></span></div>
-                    <p>I have studied ADS in the IFPB Cajazeiras and will graduate in the end 2022.2, as goal, I aim to become an excellent Software Developer. For that, I usually study some courses and project to complement my knolege.</p>
+                    <div class="text">I'm Luciana and I'm a <span class="typing_2"></span>
+                    <span class="static_typing">Developer & Frontend & Student</span></div>
+                    <p>I have studied ADS in the IFPB Cajazeiras and will graduate in the end 2022.2, as goal, I aim to become an excellent Software Developer. For that, I usually study some courses and project to complement my knowlege.</p>
                     <p>I like to program, read and perform teamwork where I can learn and also develop my skills of collaboration, leadership and management.</p>
-                    <p>I like to describe myself as a dedicated, motivated and dynamic. Right now I am searching for oportunities to develop myself in a company that allows me to apply the knolege I have acquired in my graduation and courses, so I can develop myself even more in the Software Development area.</p>
+                    <p>I like to describe myself as a dedicated, motivated and dynamic. Right now I am searching for oportunities to develop myself in a company that allows me to apply the knowlege I have acquired in my graduation and courses, so I can develop myself even more in the Software Development area.</p>
                     <p>Thanl you for you attention, for more information, send me an email.</p>
                     <h3 class="my-languages">Languages I speak</h3>
                     <table>
