Fixing spelling errors

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
                 <div class="column right">
                     <div class="text">I'm Luciana and I'm a <span class="typing_2"></span>
                     <span class="static_typing">Developer & Frontend & Student</span></div>
-                    <p>I have studied ADS in the IFPB Cajazeiras and will graduate in the end 2022.2, as goal, I aim to become an excellent Software Developer. For that, I usually study some courses and project to complement my knowlege.</p>
+                    <p>I have studied ADS (analysis and systems development) at the IFPB (Instituto Federal da Paraiba) campus Cajazeiras and will graduate in a few months, as goal, I aim to become an excellent Software Developer. For that, I usually take courses and study projects to complement my knowlege.</p>
                     <p>I like to program, read and perform teamwork where I can learn and also develop my skills of collaboration, leadership and management.</p>
-                    <p>I like to describe myself as a dedicated, motivated and dynamic. Right now I am searching for oportunities to develop myself in a company that allows me to apply the knowlege I have acquired in my graduation and courses, so I can develop myself even more in the Software Development area.</p>
-                    <p>Thanl you for you attention, for more information, send me an email.</p>
+                    <p>I like to describe myself as a dedicated, motivated and dynamic. Right now I am searching for opportunities to develop myself in a company that allows me to apply the knowlege I have acquired in my graduation and courses, so I can develop myself even more in the Software Development area.</p>
+                    <p>Thank you for you attention, for more information, send me an email.</p>
                     <h3 class="my-languages">Languages I speak</h3>
                     <table>
                         <tr>
@@ -149,9 +149,9 @@
             <h2 class="title">My skills</h2>
             <div class="skills-content">
                 <div class="column left">
-                    <div class="text">My creative skill & expiriences.</div>
-                    <p>In order to keep updated I take lots of online classes to maintain myself on track to what's new. So I usually do projects and maintain then online to show my skills, a lot I don't put because they don't have the quality I want, so even though there's nothing new in my github, that doesn't necesarelly means I'm not doing anything.</p>
-                    <p>I like code with quality, so I always go for it, it's important a code you can read months later and understand it.</p>
+                    <div class="text">My creative skill & experiences.</div>
+                    <p>In order to improve my skills, I take lots of online classes to maintain myself on track to what's new. So I usually do projects and maintain then online to show my skills, a lot of then I don't put online because they don't have the quality I want, so even though there's nothing new in my github, that doesn't necesarelly means I'm not doing anything.</p>
+                    <p>I like my code to have quality, so I always go for it, it's good when you can read a code months later and it still make sense.</p>
                 </div>
                 <div class="column right">
                     <div class="bars">
