Updating github info

--- a/index.html
+++ b/index.html
@@ -380,7 +380,9 @@
                 </div>
                 <div class="column right">
                     <div class="img">
-                        <a href="https://github.com/luluthedevil"><img src="imgs/github.png" alt=""></a>
+                        <a href="view-source:https:https://github.com/luluthedevil">
+                            <img src="imgs/github.png" alt="Luciana's github">
+                        </a>
                     </div>
                 </div>
             </div>
