--- a/index.html
+++ b/index.html
@@ -359,14 +359,14 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name:</div>
-                                <div class="sub-title">Luciana Ferreira</div>
+                                <div class="sub-title">Luciana Ferreira Miranda</div>
                             </div>
                         </div>
                         <div class="row">
-                            <i class="fas fa-camera"></i>
+                            <i class="fab fa-linkedin-in"></i>
                             <div class="info">
-                                <div class="head">Instagram and Twitter:</div>
-                                <div class="sub-title">@luluthedevil</div>
+                                <div class="head">LinkedIn:</div>
+                                <div class="sub-title"><a href="https://www.linkedin.com/in/luciana-ferreira-miranda-556893153/">Linkedin</a></div>
                             </div>
                         </div>
                         <div class="row">
