--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                 </div>
                 <div class="column right">
                     <div class="img">
-                        <a href="view-source:https:https://github.com/luluthedevil">
+                        <a href="https://github.com/luluthedevil">
                             <img src="imgs/github.png" alt="Luciana's github">
                         </a>
                     </div>
