Project - Online paint added

--- a/index.html
+++ b/index.html
@@ -227,6 +227,15 @@
                 </div>
                 <div class="card">
                     <div class="box">
+                        <img src="imgs/onlinecanvas.png" alt="Online paint">
+                        <div class="text">Online paint</div>
+                        <p>Online canvas that you can draw and download the image backgroundless. Made with Javascript</p>
+                        <p><a href="https://github.com/luluthedevil/simple-paint/">github</a></p>
+                        <p><a href="https://luluthedevil.github.io/simple-paint/">Test it</a></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
                         <img src="imgs/bookstore-1.png" alt="Bookstore">
                         <div class="text">Bookstore</div>
                         <p>Bookstore made with Angular and Spring(Java)</p>
