Fixing typing errors

--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
                         </span>
                     </div>
                     <p id="about-text-1">
-                        I have studied ADS (analysis and systems development) at the IFPB (Instituto Federal da Paraiba) campus Cajazeiras and will graduate in a few months, as goal, I aim to become an excellent Software Developer. For that, I usually take courses and study projects to complement my knowlege.
+                        I have studied ADS (analysis and systems development) at the IFPB (Instituto Federal da Paraiba) campus Cajazeiras and will graduate in a few months. As goal, I aim to become an excellent Software Developer.
                     </p>
                     <p id="about-text-2">
-                        I like to program, read and perform teamwork where I can learn and also develop my skills of collaboration, leadership and management.
+                        I am a curious, dedicated, motivated person and solving problems makes me excited, studying is part of my day to day and challenges keep me motivated to discover the best solutions. I like programming, reading and doing teamwork where I can learn and also develop collaboration, leadership and management skills. I also like to study languages, I am currently fluent in English and I am studying a little French and Italian on my own.
                     </p>
                     <p id="about-text-3">
-                        I like to describe myself as a dedicated, motivated and dynamic. Right now I am searching for opportunities to develop myself in a company that allows me to apply the knowlege I have acquired in my graduation and courses, so I can develop myself even more in the Software Development area.
+                        Currently, I am looking for opportunities in junior positions in a company that will allow me to apply my knowledge so that I can improve myself and grow up with the company and my co-workers.
                     </p>
                     <h3 id="lang-title" class="my-languages">Languages I speak</h3>
                     <table>
@@ -183,7 +183,7 @@
                     <div class="box">
                         <i class="fas fa-paint-brush">
                             <div id="services-title-1" class="text">Web</div>
-                            <p id="services-txt-1">I know HTML, CSS, Javascript, Java, Python and other tools as well. There are also other some projects you can check out in my github.</p>
+                            <p id="services-txt-1">I know HTML, CSS, Javascript, Java, Python and other tools as well. There are also some other projects you can check out in my github.</p>
                         </i>
                     </div>
                 </div>
@@ -219,7 +219,7 @@
                     <div id="skills-subtitle" class="text">
                         My creative skill & experiences.
                     </div>
-                    <p id="skills-txt-1">In order to improve my skills, I take lots of online classes to maintain myself on track to what's new. So I usually do projects and maintain then online to show my skills, there are some of then I don't put online because I think they don't have the quality, so even though there's nothing new in my github, that doesn't necesarelly means I'm not doing anything.</p>
+                    <p id="skills-txt-1">In order to improve my skills, I take lots of online classes to maintain myself on track to what's new. So I usually do projects and maintain it online to show my skills, there are some of it I doesn't put online when I think they doesn't have what is necessary. So even though there's nothing new in my github, that doesn't necesarelly means I'm not doing anything.</p>
                     <p id="skills-txt-2">I like my code to have quality, so I always go for it, it's good when you can read a code months later and it still make sense.</p>
                 </div>
                 <div class="column right">
