Added drumkit project

--- a/index.html
+++ b/index.html
@@ -329,16 +329,21 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="imgs/bookstore-1.png" alt="Bookstore">
-                        <div id="proj-title-bookstore" class="text">
-                            Bookstore
+                        <img src="imgs/drumkit.png" alt="Drum kit">
+                        <div id="proj-title-drumkit" class="text">
+                            Drum kit
                         </div>
-                        <p id="proj-txt-bookstore">
-                            Bookstore made with Angular and Spring(Java)
+                        <p id="proj-txt-drumkit">
+                            Drum kit with sound and basic button press animation (keyboard as well), made with javascript
                         </p>
                         <p>
-                            <a href="https://github.com/luluthedevil/crud-angular-java-bookstore">
+                            <a href="https://github.com/luluthedevil/drumkit">
                                 github
+                            </a>
+                        </p>
+                        <p>
+                            <a href="https://luluthedevil.github.io/drumkit/">
+                                Test it
                             </a>
                         </p>
                     </div>
