jquery selectors in javascript

--- a/index.html
+++ b/index.html
@@ -97,7 +97,10 @@
             <div class="home-content">
                 <div id="salution" class="text-1">Hello, my name is</div>
                 <div class="text-2">Luciana Ferreira</div>
-                <div id="im" class="text-3">And I'm a <span class="typing"></span></div>
+                <div id="im" class="text-3">
+                    And I'm a 
+                    <span class="typing"></span>
+                </div>
             </div>
         </div>
     </section>
