--- a/index.html
+++ b/index.html
@@ -516,7 +516,15 @@
     <!-- Footer section start -->
 
     <footer>
-        <span>Created by <a href="https://github.com/luluthedevil">Luluthedevil</a> | <span class="far fa-copyright"> 2021 All rights reserved.</span></span>
+        <span>
+            Created by 
+            <a href="https://github.com/luluthedevil">
+                Luluthedevil
+            </a> | 
+            <span class="far fa-copyright"> 
+                2021 All rights reserved.
+            </span>
+        </span>
     </footer>
 
     <script src="script.js"></script>
