--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         I'm Luciana and I'm a 
                         <span class="typing_2"></span>
                         <span class="static_typing">
-                            Data Scientis & Data Analyst & Machine Learning Engineer & Data Engineer
+                            Data Scientis & Data Analyst & Data Engineer & Machine Learning Engineer
                         </span>
                     </div>
                     <p id="about-text-1">
