--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email:</div>
-                                <div class="sub-title">luluthedevil6666@gmail.com</div>
+                                <div class="sub-title">luciana.fm.data.scientist@gmail.com</div>
                             </div>
                         </div>
                     </div>
